Revise based on Ohad's comments.
Ohad has looked the document over and has made some revisons and
suggested some minor edits. This commit makes Ohad's edits.

--- a/agn-cadence-strategy-metric.tex
+++ b/agn-cadence-strategy-metric.tex
@@ -34,15 +34,15 @@ We propose a metric for the Metric Analysis Framework (MAF) that will help deter
 \end{abstract}
 
 \section{Introduction}
-Active Galactic Nuclei exhibit rapid stochastic (i.e., bereft of periodicity) flux variations at the $\sim 10$ - $20$ \% level on timescales ranging from hours to years across the electromagnetic spectrum \citep{UrryARAA, Peterson}. Variability may be observed in both the broad-line region (BLR) as well as in the continuum \citep{Peterson99}. Continuum variability is thought to arise in the accretion disk of the AGN; however the exact origin of accretion disk variability is unknown \citep{Accretion14b}. Probing the origins of accretion disk variability by matching phenomenological statistical models for the variability with physical models of accretion physics may prove to be of critical value in developing a deeper understanding of the nature of accretion.
+Active Galactic Nuclei exhibit rapid stochastic, aperiodic (but see also \citet{Graham15} and \citet{FalsePeriodicities} for a discussion of observed periodicities) flux variations  at the $\sim 10$ - $20$ \% level in the optical on timescales ranging from minutes to years across the entire electromagnetic spectrum \citep{UrryARAA, Peterson}. In the x-ray, variability can occur at the $100\times$ level in narrow-line Seyfert 1s \citep{NLSy1XRayVariability}. Variability may be observed in both the broad-line region (BLR) as well as in the continuum \citep{Peterson99}. Continuum variability arises in both the accretion disk of the AGN as well in the radio-jets (if present); however the exact origin of accretion disk variability is unknown \citep{Accretion14b}. Probing the origins of accretion disk variability by matching phenomenological statistical models for the variability with physical models of accretion physics may prove to be of critical value in developing a deeper understanding of the nature of accretion.
 
-The most popular statistical process used to describe AGN variability is the Continuous-time AutoRegressive Moving Average (C-ARMA) process \citep{Kelly14, Brockwell14} of which the damped random walk (DRW) process \citep{Kelly09} is the simplest kind. \citet{KasliwalCARMA} argue in favor of a physical interpretation of C-ARMA processes that may reveal how flux perturbations in the accretion disk of an AGN evolve. \citet{KasliwalCARMA} show that flux perturbations in the \textit{Kepler} light curve of the Seyfert 1 AGN Zw 229-15 rapidly intensify over a period of $\sim 5.5$~d before exponentially decaying to the mean level with a decay timescale of $\sim 70$~d. The shape of the light curve of individual fluctuations is consistent with that expected from a $2^{\mathrm{nd}}$-order differential equation suggesting that some combination of turbulent dissipation, thermal diffusion and viscous diffusion may be at work in the AGN accretion disk. The application of such analysis methods to the large samples of AGN light curves expected from LSST may tremendously enhance our knowledge of AGN by providing us with population statistics for the quantities estimated in \citet{KasliwalCARMA}.
+The most popular statistical processes used to describe AGN variability are the Continuous-time AutoRegressive Moving Average (C-ARMA) processes \citep{Kelly14, Brockwell14} of which the damped random walk (DRW) process \citep{Kelly09} is the simplest kind. \citet{KasliwalCARMA} argue in favor of a physical interpretation of C-ARMA processes that may reveal how flux perturbations in the accretion disk of an AGN evolve. \citet{KasliwalCARMA} show that flux perturbations in the \textit{Kepler} light curve of the Seyfert 1 AGN Zw 229-15 rapidly intensify over a period of $\sim 5.5$~d before exponentially decaying to the mean level with a decay timescale of $\sim 70$~d. The shape of the light curve of individual fluctuations is consistent with that expected from a $2^{\mathrm{nd}}$-order differential equation suggesting that some combination of turbulent dissipation, thermal diffusion and viscous diffusion may be at work in the AGN accretion disk. The application of such analysis methods to the large samples of AGN light curves expected from LSST may tremendously enhance our knowledge of AGN by providing us with population statistics for the quantities estimated in \citet{KasliwalCARMA}.
 
-Application of C-ARMA processes to AGN light curves requires \textit{well-sampled} light curves. \citet{KasliwalCARMA} demonstrate how two C-ARMA processes---a simple DRW and the $2^{\mathrm{nd}}$-order damped harmonic oscillator (DHO) can have similar looking power spectral density (PSD) on the long timescales typically probed by ground-based surveys such as the SDSS Stripe 82 \citep{S82}. On short timescales, the DRW contains excess power as compared to the DHO; a well-sampled light curve drawn from a DHO will look \textit{smoother} than a light curve drawn from a DRW on short timescales even if they look indistinguishable on longer timescales. While this argument makes it clear that it is necessary to sample both short- and long-timescales with LSST, it does not provide us with a sampling strategy. \textit{How should we allocate (in timesteps) the precious exposures available in each LSST filter band in order to unambiguously capture the nature of AGN variability?} It seems that uniform sampling is not desirable given a fixed exposure budget because it limits the shortest cadence interval severely and gives us no high frequency information. Non-uniform sampling promises to deliver information about variability on a multitude of time scales however it is not clear what the optimal pattern is. We outline a method for evaluating the optimality of each LSST cadence pattern produced by an OpSim for studying AGN accretion disc variability science.
+Application of C-ARMA processes to AGN light curves requires \textit{well-sampled} light curves. \citet{KasliwalCARMA} demonstrate how two C-ARMA processes---a simple DRW and the $2^{\mathrm{nd}}$-order damped harmonic oscillator (DHO) can have similar looking power spectral density (PSD) on the long timescales typically probed by ground-based surveys such as the SDSS Stripe 82 \citep{S82}. On short timescales, the DRW contains excess power as compared to the DHO; a well-sampled light curve drawn from a DHO will look \textit{smoother} than a light curve drawn from a DRW on short timescales even if they look indistinguishable on longer timescales. While this argument makes it clear that it is necessary to sample both short- and long-timescales with LSST, it does not provide us with a sampling strategy. \textit{How should we allocate (in timesteps) the precious exposures available in each LSST filter band in order to unambiguously capture the nature of AGN variability?} Given a fixed exposure budget, uniform sampling may not be optimal in the WFD because it limits the shortest cadence interval severely and gives us little high frequency information. Non-uniform sampling \textit{may} be able to deliver information about variability on a multitude of time scales given the WFD visits budget; however it is not clear what the optimal pattern is. We outline a method for evaluating the optimality of each LSST cadence pattern produced by an OpSim for studying AGN accretion disc variability science.
 
 \section{AGN Lightcurve Simulation and MAF Metric}
 
-The project described here will evaluate how accurately proposed LSST OpSims will perform for AGN optical variability science goals. We propose to implement the cadence analysis discussed below into the Metric Analysis Framework (MAF) in order to automate the merit of each OpSim cadence pattern for AGN accretion disc science.
+The project described here will evaluate how accurately proposed LSST OpSims will perform for AGN disc-intrinsic variability science goals. We propose to implement the cadence analysis discussed below into the Metric Analysis Framework (MAF) in order to automate the merit of each OpSim cadence pattern for AGN accretion disc science.
 
 Light curves will be simulated for AGN across numerous fields in the projected LSST sky footprint including deep drilling fields (DDFs) using the Python language \textsc{k\={a}l\={i}} software library of \citet{KasliwalCARMA}. Densely-sampled mock light curves, drawn from a range of C-ARMA models with different model orders and characteristic timescales, will be generated to simulate the underlying true population of AGN. Our prior for generating the dense mocks will be drawn from the results of the \textit{K2} studies of AGN variability currently in progress. The frequency of visits for all bands in randomly selected fields will be used to generate realistic light curves for each LSST band by down-sampling from the dense mocks at various RA and Dec within the LSST footprint.  The complete test ensemble of AGN targets will be simulated at different S/N levels to probe the effectiveness of binning rapidly-obtained observations of faint objects in order to boost the S/N. The \textsc{k\={a}l\={i}} software will then be used to infer what C-ARMA model fits each simulated light curve best.
 
