--- a/allrefs.bib
+++ b/allrefs.bib
@@ -4988,3 +4988,35 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2016arXiv160602620V},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Graham15,
+   author = {{Graham}, M.~J. and {Djorgovski}, S.~G. and {Stern}, D. and 
+	{Drake}, A.~J. and {Mahabal}, A.~A. and {Donalek}, C. and {Glikman}, E. and 
+	{Larson}, S. and {Christensen}, E.},
+    title = "{A systematic search for close supermassive black hole binaries in the Catalina Real-time Transient Survey}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1507.07603},
+ keywords = {methods: data analysis, techniques: photometric, surveys, quasars: general, quasars: supermassive black holes},
+     year = 2015,
+    month = oct,
+   volume = 453,
+    pages = {1562-1576},
+      doi = {10.1093/mnras/stv1726},
+   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.453.1562G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{NLSy1XRayVariability,
+   author = {{Boller}, T. and {Brandt}, W.~N. and {Fink}, H.},
+    title = "{Soft X-ray properties of narrow-line Seyfert 1 galaxies.}",
+  journal = {\aap},
+   eprint = {astro-ph/9504093},
+ keywords = {GALAXIES: ACTIVE, GALAXIES: SEYFERT, X-RAYS: GALAXIES},
+     year = 1996,
+    month = jan,
+   volume = 305,
+    pages = {53},
+   adsurl = {http://adsabs.harvard.edu/abs/1996A%26A...305...53B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
