Took out stuff about uniform cadence vs irregular cadence

--- a/agn-cadence-strategy-metric.tex
+++ b/agn-cadence-strategy-metric.tex
@@ -38,7 +38,9 @@ Active Galactic Nuclei exhibit rapid stochastic, aperiodic (but see also \citet{
 
 The most popular statistical processes used to describe AGN variability are the Continuous-time AutoRegressive Moving Average (C-ARMA) processes \citep{Kelly14, Brockwell14} of which the damped random walk (DRW) process \citep{Kelly09} is the simplest kind. \citet{KasliwalCARMA} argue in favor of a physical interpretation of C-ARMA processes that may reveal how flux perturbations in the accretion disk of an AGN evolve. \citet{KasliwalCARMA} show that flux perturbations in the \textit{Kepler} light curve of the Seyfert 1 AGN Zw 229-15 rapidly intensify over a period of $\sim 5.5$~d before exponentially decaying to the mean level with a decay timescale of $\sim 70$~d. The shape of the light curve of individual fluctuations is consistent with that expected from a $2^{\mathrm{nd}}$-order differential equation suggesting that some combination of turbulent dissipation, thermal diffusion and viscous diffusion may be at work in the AGN accretion disk. The application of such analysis methods to the large samples of AGN light curves expected from LSST may tremendously enhance our knowledge of AGN by providing us with population statistics for the quantities estimated in \citet{KasliwalCARMA}.
 
-Application of C-ARMA processes to AGN light curves requires \textit{well-sampled} light curves. \citet{KasliwalCARMA} demonstrate how two C-ARMA processes---a simple DRW and the $2^{\mathrm{nd}}$-order damped harmonic oscillator (DHO) can have similar looking power spectral density (PSD) on the long timescales typically probed by ground-based surveys such as the SDSS Stripe 82 \citep{S82}. On short timescales, the DRW contains excess power as compared to the DHO; a well-sampled light curve drawn from a DHO will look \textit{smoother} than a light curve drawn from a DRW on short timescales even if they look indistinguishable on longer timescales. While this argument makes it clear that it is necessary to sample both short- and long-timescales with LSST, it does not provide us with a sampling strategy. \textit{How should we allocate (in timesteps) the precious exposures available in each LSST filter band in order to unambiguously capture the nature of AGN variability?} Given a fixed exposure budget, uniform sampling may not be optimal in the WFD because it limits the shortest cadence interval severely and gives us little high frequency information. Non-uniform sampling \textit{may} be able to deliver information about variability on a multitude of time scales given the WFD visits budget; however it is not clear what the optimal pattern is. We outline a method for evaluating the optimality of each LSST cadence pattern produced by an OpSim for studying AGN accretion disc variability science.
+Application of C-ARMA processes to AGN light curves requires \textit{well-sampled} light curves. \citet{KasliwalCARMA} demonstrate how two C-ARMA processes---a simple DRW and the $2^{\mathrm{nd}}$-order damped harmonic oscillator (DHO) can have similar looking power spectral density (PSD) on the long timescales typically probed by ground-based surveys such as the SDSS Stripe 82 \citep{S82}. On short timescales, the DRW contains excess power as compared to the DHO; a well-sampled light curve drawn from a DHO will look \textit{smoother} than a light curve drawn from a DRW on short timescales even if they look indistinguishable on longer timescales. While this argument makes it clear that it is necessary to sample both short- and long-timescales with LSST, it does not provide us with a sampling strategy. \textit{How should we allocate (in timesteps) the precious exposures available in each LSST filter band in order to unambiguously capture the nature of AGN variability?}
+%Given a fixed exposure budget, uniform sampling may not be optimal in the DDFs and commissioning fields because it limits the shortest cadence interval severely and gives us limited high frequency information. Non-uniform sampling \textit{may} be able to deliver information about variability on a multitude of time scales given the visits budget; however it is not clear what the optimal pattern is. 
+We outline a method for evaluating the optimality of each LSST cadence pattern produced by an OpSim for AGN accretion disc variability science.
 
 \section{AGN Lightcurve Simulation and MAF Metric}
 
